--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/LambdaSchool/Node-Blog#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-timestamp": "^0.1.4",
     "knex": "^0.16.3",
     "sqlite3": "^4.0.6"
   },
